# rusty-cryptix

./: Cargo.toml  README.md  startup-repair-force-100000.json
cli/: Cargo.toml
cli/src/: cli.rs  error.rs  imports.rs  lib.rs  main.rs
cli/src/extensions/: transaction.rs
cli/src/modules/: account.rs  connect.rs  create-unsigned-tx.rs  estimate.rs  guide.txt  mod.rs  rpc.rs  send.rs  sweep.rs  token.rs  transfer.rs
cli/src/wizards/: wallet.rs
components/connectionmanager/: Cargo.toml
components/connectionmanager/src/: lib.rs
consensus/: Cargo.toml
consensus/client/src/: header.rs  imports.rs  sign.rs
consensus/core/src/: block.rs  constants.rs  network.rs  pruning.rs  subnets.rs
consensus/core/src/api/: counters.rs  mod.rs
consensus/core/src/config/: bps.rs  genesis.rs  mod.rs  params.rs
consensus/core/src/errors/: block.rs  config.rs  pruning.rs  tx.rs
consensus/core/src/mass/: mod.rs
consensus/core/src/tx/: script_public_key.rs
consensus/notify/src/: notification.rs
consensus/pow/src/: lib.rs  matrix.rs  wasm.rs
consensus/src/consensus/: factory.rs  mod.rs  services.rs  startup_repair.rs  storage.rs  test_consensus.rs  utxo_set_override.rs
consensus/src/model/stores/: atomic_state.rs  ghostdag.rs  mod.rs  reachability.rs  relations.rs  tips.rs  virtual_state.rs
consensus/src/pipeline/: monitor.rs
consensus/src/pipeline/body_processor/: body_validation_in_context.rs  body_validation_in_isolation.rs  processor.rs
consensus/src/pipeline/header_processor/: processor.rs
consensus/src/pipeline/pruning_processor/: processor.rs
consensus/src/pipeline/virtual_processor/: atomic_stress_crosscheck.rs  processor.rs  test_block_builder.rs  tests.rs  utxo_validation.rs
consensus/src/processes/: coinbase.rs  parents_builder.rs  relations.rs  traversal_manager.rs
consensus/src/processes/pruning_proof/: mod.rs
consensus/src/processes/reachability/: inquirer.rs
consensus/src/processes/reachability/tests/: mod.rs
consensus/src/processes/sync/: mod.rs
consensus/src/processes/transaction_validator/: mod.rs  transaction_validator_populated.rs  tx_validation_in_isolation.rs
cryptixd/: Cargo.toml  README.md
cryptixd/src/: args.rs  atomic_bootstrap.rs  daemon.rs  lib.rs
daemon/src/: imports.rs  lib.rs
database/src/: cache.rs  registry.rs  (+1 more)
docs/: antifraud_hf_v1_binary_schema.md  antifraud_hf_v1_state_machine.md  antifraud_hf_v1_test_vectors.json  atomic_consensus_state_root_v2.json  payload-hardfork-v1.md  startup-repair-plan.example.json  strong_node_claimant_hf_v1_1_vectors.json  unified_node_identity_hf_v1_test_vectors.json
indexes/atomicindex/: Cargo.toml  README.md  TRADING_FLOW.md
indexes/atomicindex/src/: consensus_state_import.rs  error.rs  lib.rs  liquidity_math.rs  payload.rs  service.rs  state.rs  storage_v2.rs
mining/: Cargo.toml
mining/benches/: bench.rs
mining/errors/src/: mempool.rs
mining/src/: cache.rs  manager.rs  manager_tests.rs
mining/src/block_template/: builder.rs  policy.rs  selector.rs
mining/src/mempool/: atomic_slots.rs  check_transaction_standard.rs  config.rs  handle_new_block_transactions.rs  mod.rs  populate_entries_and_try_validate.rs  remove_transaction.rs  replace_by_fee.rs  validate_and_insert_transaction.rs
mining/src/mempool/model/: frontier.rs  transactions_pool.rs  tx.rs  utxo_set.rs
mining/src/mempool/model/frontier/: selectors.rs
mining/src/model/: topological_sort.rs
mining/src/testutils/: consensus_mock.rs
protocol/flows/: Cargo.toml
protocol/flows/src/: antifraud.rs  flow_context.rs  flow_trait.rs  hfa.rs  lib.rs  node_identity.rs  pq_handshake.rs  service.rs  strong_node_claims.rs
protocol/flows/src/flowcontext/: orphans.rs  transactions.rs
protocol/flows/src/v5/: address.rs  hfa.rs  mod.rs  ping.rs  request_antipast.rs  request_atomic_token_state_hash.rs  request_consensus_atomic_state_hash.rs  request_pp_proof.rs  request_pruning_point_and_anticone.rs  request_pruning_point_utxo_set.rs  strong_node_claims.rs
protocol/flows/src/v5/blockrelay/: flow.rs  handle_requests.rs
protocol/flows/src/v5/ibd/: flow.rs  progress.rs  streams.rs
protocol/flows/src/v5/txrelay/: flow.rs
protocol/flows/src/v6/: mod.rs  request_pruning_point_and_anticone.rs
rpc/service/: Cargo.toml
rpc/service/src/: block_scan_cache.rs  hfa.rs  lib.rs  service.rs
rpc/service/src/converter/: consensus.rs  feerate_estimate.rs  protocol.rs
testing/integration/: Cargo.toml
testing/integration/src/: atomic_token_integration_tests.rs  consensus_integration_tests.rs  consensus_pipeline_tests.rs  daemon_integration_tests.rs  lib.rs  mempool_benchmarks.rs  rpc_tests.rs  subscribe_benchmarks.rs
testing/integration/src/common/: utils.rs
testing/integration/src/tasks/: mod.rs
testing/integration/src/tasks/block/: group.rs
testing/integration/src/tasks/subscription/: group.rs  submitter.rs
testing/integration/src/tasks/tx/: group.rs
wallet/: README.md
wallet/core/: Cargo.toml
wallet/core/src/: derivation.rs  error.rs  imports.rs  message.rs  prelude.rs  settings.rs
wallet/core/src/account/: mod.rs  pskb.rs
wallet/core/src/account/variants/: legacy.rs
wallet/core/src/api/: message.rs  traits.rs  transport.rs
wallet/core/src/compat/: gen0.rs  gen1.rs
wallet/core/src/storage/local/transaction/: indexdb.rs
wallet/core/src/storage/transaction/: data.rs  record.rs
wallet/core/src/tx/: mass.rs  mod.rs  payload.rs  payment.rs
wallet/core/src/tx/generator/: generator.rs  pending.rs  settings.rs  test.rs
wallet/core/src/utxo/: context.rs  mod.rs  processor.rs  scan.rs  settings.rs  test.rs
wallet/core/src/wallet/: api.rs  mod.rs
wallet/core/src/wasm/: cryptobox.rs  signer.rs  utils.rs
wallet/core/src/wasm/api/: extensions.rs  message.rs  mod.rs
wallet/core/src/wasm/tx/: mod.rs  payload.rs  utils.rs
wallet/core/src/wasm/tx/generator/: generator.rs
wallet/native/: Cargo.toml  build.rs
wallet/native/proto/: cryptixwalletd.proto
wallet/native/src/: daemon.rs  main.rs
wasm/: README.md  build-node  build-node-dev  build-release  build-web  build-web-dev
(+98 files in other folders)
