[package]
name = "cryptix-connectionmanager"
description = "Cryptix connection manager"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
include.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
duration-string.workspace = true
futures-util.workspace = true
itertools.workspace = true
cryptix-addressmanager.workspace = true
cryptix-core.workspace = true
cryptix-p2p-lib.workspace = true
cryptix-utils.workspace = true
log.workspace = true
parking_lot.workspace = true
rand.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json.workspace = true
serde.workspace = true
blake3.workspace = true
secp256k1.workspace = true
tokio.workspace = true
